# smart_water_api

./: .gitignore  pyproject.toml  repository.yaml
.github/workflows/: publish.yaml
app/: main.py  schemas.py
smart_water_api/: Dockerfile  config.yaml  pyproject.toml  run.sh
smart_water_api/app/: database.py  main.py  models.py  schemas.py
smart_water_api/app/ha/: ha_endpoints.py  ha_schemas.py
smart_water_api/app/plant/: plant_endpoints.py  plant_schemas.py
smart_water_api/app/room/: room_endpoints.py  room_schemas.py
