[project]
name = "smart-water-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Viera",email = "anthonyviera4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "pillow (>=12.3.0,<13.0.0)",
    "pillow-heif (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
